# accio

./: .gitignore  README.md  pyproject.toml
examples/: simple_crawl.py
src/accio/: __init__.py
src/accio/brain/: models.py
src/accio/core/: config.py  crawler.py
src/accio/memory/: cache.py
src/accio/parser/: chunker.py
